ObjectControlPoint
bisa mengecek koordinat di terminal untuk vector3f